added pictures and linked signin/login button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Board Games</title>
+    <title>Board Game</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
@@ -30,8 +30,8 @@
             <a class="nav-link" href="accessories.html">ACCESSORIES</a>
           </li>
         </ul>
-        <div class="d-grid gap-2 d-md-block me-4">
-          <button class="btn btn-primary" type="button">SIGN IN</button>
+        <div class="d-grid gap-2 d-md-block me-4"> <a href="sign-in.html">
+          <button class="btn btn-secondary" type="button">SIGN IN / LOGIN</a></button>
         </div>
       </nav>
     </header>
@@ -46,27 +46,36 @@
           <h1 class="lead banner-header">A Game of Woodland <br> Might and Right</h1>
         </div>
       </div>
-      <div class="d-flex align-items-center flex-column mt-5 pt-5">
-        <h1 class="new-header mb-4 pb-4">New Releases</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="d-flex align-items-center flex-column mt-5 pt-5 mb-5">
+        <h1 class="new-header mb-4 pb-5">New Releases</h1>
+        <div class="row row-cols-1 row-cols-md-5 g-4 justify-content-center">
           <div class="col">
-            <div class="card ">
-              <img src="..." class="card-img-top im" alt="...">
-              <div class="card-body1">
+            <div class="card d-flex align-items-center" style="background-color: rgb(174, 209, 54)">
+              <img src="imges/box.png" style="width: 17rem;" class="card-img-top im mt-4 mb-5" alt="...">
+              <div class="card-body" style="color: black;">
                 <div class="d-flex flex-row justify-content-between">
-                <h5 class="card-title">Product Item 1 <br>Proudct Item 1</h5>
-                <h5> $17.99</h5>
+                <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Steam Up:<br>A Feast of Dim Sum</h5>
+                <h5 class="ms-4">$60 USD</h5>
               </div>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This one-of-a-kind strategy game offers players an immersive cultural experience as they compete to collect Dim Sum while embodying one of the 12 magnificent Chinese Zodiac animals</p>
+              </div>
+              <div>
+                <button type="button" class="btn btn-secondary btn-sm mb-4 mt-3">Add to Cart</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body2">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="card d-flex align-items-center" style="background-color: rgb(223, 95, 38)">
+              <img src="imges/PZO12006-HC (1).png" style="width: 15rem;" class="card-img-top im mt-4 mb-5" alt="...">
+              <div class="card-body" style="color: black;">
+                <div class="d-flex flex-row justify-content-between">
+                <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Pathfinder RPG<br>War of Immortals</h5>
+                <h5 class="ms-4">$70 USD</h5>
+              </div>
+                <p class="card-text">A god has been slain and nothing shall ever be the same again! As war and destruction spread across the world, new heroes must rise to the occasion and take arms to protect its mortal inhabitants.</p>
+              </div>
+              <div>
+                <button type="button" class="btn btn-secondary btn-sm mb-4 mt-3">Add to Cart</button>
               </div>
             </div>
           </div>
