--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Board Game</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   </head>
   <body>
     <header>
@@ -30,8 +31,13 @@
             <a class="nav-link" href="accessories.html">ACCESSORIES</a>
           </li>
         </ul>
-        <div class="d-grid gap-2 d-md-block me-4"> <a href="sign-in.html">
-          <button class="btn btn-secondary" type="button">SIGN IN / LOGIN</a></button>
+        <div class="d-flex align-items-center me-4">
+          <a class="icon-link me-3" href="checkout.html">
+            <i class="uil uil-shopping-cart" style="font-size: 1.8rem; color: white;"></i>
+          </a>
+          <a href="sign-in.html">
+            <button class="btn btn-secondary" type="button">SIGN IN / LOGIN</button>
+          </a>
         </div>
       </nav>
     </header>
