--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <i class="uil uil-shopping-cart" style="font-size: 1.8rem; color: white;"></i>
           </a>
           <a href="sign-in.html">
-            <button class="btn btn-secondary" type="button">SIGN IN / LOGIN</button>
+            <button class="btn btn-secondary" type="button">SIGNUP / LOGIN</button>
           </a>
         </div>
       </nav>
@@ -72,7 +72,7 @@
           </div>
           <div class="col">
             <div class="card d-flex align-items-center" style="background-color: rgb(223, 95, 38)">
-              <img src="imges/PZO12006-HC (1).png" style="width: 15rem;" class="card-img-top im mt-4 mb-5" alt="...">
+              <img src="https://cdn.shopify.com/s/files/1/0356/9149/5559/files/Catan_2_resized_480x480.png?v=1658243728" style="width: 17.5rem;" class="card-img-top im mt-4 mb-5" alt="...">
               <div class="card-body" style="color: black;">
                 <div class="d-flex flex-row justify-content-between">
                 <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Pathfinder RPG<br>War of Immortals</h5>
@@ -86,13 +86,18 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body3">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            <div class="card d-flex align-items-center" style="background-color: rgb(237, 32, 122)">
+              <img src="imges/PZO12006-HC (1).png" style="width: 15rem;" class="card-img-top im mt-4 mb-5" alt="...">
+              <div class="card-body" style="color: black;">
+                <div class="d-flex flex-row justify-content-between">
+                <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Pathfinder RPG<br>War of Immortals</h5>
+                <h5 class="ms-4">$70 USD</h5>
               </div>
-              
+                <p class="card-text">A god has been slain and nothing shall ever be the same again! As war and destruction spread across the world, new heroes must rise to the occasion and take arms to protect its mortal inhabitants.</p>
+              </div>
+              <div>
+                <button type="button" class="btn btn-secondary btn-sm mb-4 mt-3">Add to Cart</button>
+              </div>
             </div>
           </div>
     </main>
