--- a/accessories.html
+++ b/accessories.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Examples</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   </head>
   <body>
     <header>
-      <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-        <ul class="nav nav-underline">
-          <li class="nav-item"></li>
+      <nav class="navbar border-bottom border-body" data-bs-theme="dark">
+        <ul class="nav nav-underline ms-4">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
@@ -30,8 +31,15 @@
             <a class="nav-link" href="accessories.html">ACCESSORIES</a>
           </li>
         </ul>
-        <div class="d-grid gap-2 d-md-block me-4">
-          <button class="btn btn-primary" type="button">SIGN IN</button>
+        <div class="d-flex align-items-center me-4">
+          <a class="icon-link me-3" href="checkout.html">
+            <i class="uil uil-shopping-cart" style="font-size: 1.8rem; color: white;"></i>
+          </a>
+          <a href="sign-in.html">
+            <button class="btn btn-secondary" type="button">SIGNUP / LOGIN</button>
+          </a>
         </div>
       </nav>
     </header>
+  </body>
+</html>
