--- a/checkout.html
+++ b/checkout.html
@@ -140,7 +140,9 @@
                         <p class="mb-2">Total (Incl. taxes)</p>
                         <p class="mb-2">$141.26</p>
                       </div>
+                      <a href="index.html">
                       <button type="button" class="btn btn-info btn-block btn-lg">Checkout</button>
+                      </a>
                     </div>
                   </div>
                 </div>
