finished adding pictures in cards and nav bar updated

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
     <main>
       <div class="d-flex flex-row align-items-center">
         <div>
-          <img src="imges/316219a02d33f2e593d585b1bbdba79b.png" class="image1 d-block w-3000 h-2627" alt="..." />
-          <img src="imges/ROOT_Stroke_Logo.png" class="image2 d-block w-1500 h-1254 mt-5 pt-5 ms-4 ps-4" alt=".." />
+          <img src="imges/316219a02d33f2e593d585b1bbdba79b.png" class="image1 d-block w-3000 h-2627 mt-5" alt="Board Game Background" />
+          <img src="imges/ROOT_Stroke_Logo.png" class="image2 d-block w-1500 h-1254 mt-5 pt-5 ms-4 ps-4" alt="Board Game Image" />
         </div>
         <div class="d-flex flex-column mb-5 just pb-5 mt-5 pt-5 ms-5 ps-5 align-self-start">
           <h4 class="banner-sub">Only the Fluffiest can Survive!</h4>
           <h1 class="lead banner-header">A Game of Woodland <br> Might and Right</h1>
+          <button type="button" class="btn btn-secondary btn-lg mt-2">Shop now</button>
         </div>
       </div>
       <div class="d-flex align-items-center flex-column mt-5 pt-5 mb-5">
@@ -75,10 +76,10 @@
               <img src="https://cdn.shopify.com/s/files/1/0356/9149/5559/files/Catan_2_resized_480x480.png?v=1658243728" style="width: 17.5rem;" class="card-img-top im mt-4 mb-5" alt="...">
               <div class="card-body" style="color: black;">
                 <div class="d-flex flex-row justify-content-between">
-                <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Pathfinder RPG<br>War of Immortals</h5>
-                <h5 class="ms-4">$70 USD</h5>
+                <h5 class="card-title" style="text-transform: uppercase; font-weight: bold;">Catan 5E<br>25th anniversay edition</h5>
+                <h5 class="ms-4">$55 USD</h5>
               </div>
-                <p class="card-text">A god has been slain and nothing shall ever be the same again! As war and destruction spread across the world, new heroes must rise to the occasion and take arms to protect its mortal inhabitants.</p>
+                <p class="card-text">Trade. Build. Settle.<br>In The Settlers of Catan, players try to be the dominant force on the island of Catan by building settlements, cities, and roads.</p>
               </div>
               <div>
                 <button type="button" class="btn btn-secondary btn-sm mb-4 mt-3">Add to Cart</button>
@@ -101,6 +102,9 @@
             </div>
           </div>
     </main>
-    <footer></footer>
+    <footer class="container">
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>© Yaritza Bustamante, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+    </footer>
   </body>
 </html>
