--- a/sign-in.html
+++ b/sign-in.html
@@ -6,13 +6,13 @@
     <title>Signin / Login</title>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/custom.css" />
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-        <ul class="nav nav-underline">
-          <li class="nav-item"></li>
+      <nav class="navbar border-bottom border-body" data-bs-theme="dark">
+        <ul class="nav nav-underline ms-4">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
@@ -31,8 +31,13 @@
             <a class="nav-link" href="accessories.html">ACCESSORIES</a>
           </li>
         </ul>
-        <div class="d-grid gap-2 d-md-block me-4">
-          <button class="btn btn-primary" type="button">SIGN IN</button>
+        <div class="d-flex align-items-center me-4">
+          <a class="icon-link me-3" href="checkout.html">
+            <i class="uil uil-shopping-cart" style="font-size: 1.8rem; color: white"></i>
+          </a>
+          <a href="sign-in.html">
+            <button class="btn btn-secondary" type="button">SIGNUP / LOGIN</button>
+          </a>
         </div>
       </nav>
     </header>
@@ -51,30 +56,34 @@
                       <div class="center-wrap">
                         <div class="section-text-center">
                           <h4 class="mb-4 pb-3">Log In</h4>
-                          <div class="form-group">
-                            <input
-                              type="email"
-                              name="logemail"
-                              class="form-style"
-                              placeholder="Your Email"
-                              id="logemail"
-                              autocomplete="off"
-                            />
-                            <i class="input-icon uil uil-at"></i>
-                          </div>
-                          <div class="form-group mt-2">
-                            <input
-                              type="password"
-                              name="logpass"
-                              class="form-style"
-                              placeholder="Your Password"
-                              id="logpass"
-                              autocomplete="off"
-                            />
-                            <i class="input-icon uil uil-lock-alt"></i>
-                          </div>
-                          <a href="#" class="btn mt-4">Submit</a>
-                          <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                          <form>
+                            <div class="form-group">
+                              <input
+                                required
+                                type="email"
+                                name="logemail"
+                                class="form-style"
+                                placeholder="Your Email"
+                                id="logemail"
+                                autocomplete="off"
+                              />
+                              <i class="input-icon uil uil-at"></i>
+                            </div>
+                            <div class="form-group mt-2">
+                              <input
+                                required
+                                type="password"
+                                name="logpass"
+                                class="form-style"
+                                placeholder="Your Password"
+                                id="logpass"
+                                autocomplete="off"
+                              />
+                              <i class="input-icon uil uil-lock-alt"></i>
+                            </div>
+                            <button class="btn mt-4">Submit</button>
+                            <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                          </form>
                         </div>
                       </div>
                     </div>
@@ -84,6 +93,7 @@
                           <h4 class="mb-4 pb-3">Sign Up</h4>
                           <div class="form-group">
                             <input
+                              required
                               type="text"
                               name="logname"
                               class="form-style"
@@ -93,27 +103,30 @@
                             />
                             <i class="input-icon uil uil-user"> </i>
                           </div>
-                          <div class="form-group mt-2">
-                            <input
-                              type="email"
-                              name="logemail"
-                              class="form-style"
-                              placeholder="Your Email"
-                              autocomplete="off"
-                            />
-                            <i class="input-icon uil uil-at"></i>
-                          </div>
-                          <div class="form-group mt-2">
-                            <input
-                              type="password"
-                              name="logpass"
-                              class="form-style"
-                              placeholder="Your Password"
-                              autocomplete="off"
-                            />
-                            <i class="input-icon uil uil-lock-alt"></i>
-                          </div>
-                          <a href="#" class="btn mt-4">Submit</a>
+                          <form>
+                            <div class="form-group mt-2">
+                              <input
+                                required
+                                type="email"
+                                name="logemail"
+                                class="form-style"
+                                placeholder="Your Email"
+                                autocomplete="off"
+                              />
+                              <i class="input-icon uil uil-at"></i>
+                            </div>
+                            <div class="form-group mt-2">
+                              <input
+                                type="password"
+                                name="logpass"
+                                class="form-style"
+                                placeholder="Your Password"
+                                autocomplete="off"
+                              />
+                              <i class="input-icon uil uil-lock-alt"></i>
+                            </div>
+                            <button class="btn mt-4">Submit</button>
+                          </form>
                         </div>
                       </div>
                     </div>
@@ -125,3 +138,9 @@
         </div>
       </div>
     </main>
+    <footer class="container"></footer>
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>© Yaritza Bustamante, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+  </footer>
+  </body>
+</html>
